feat: Implement import for ranger policy (#1)
* Implement import for ranger policy
* Add tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,3 +16,18 @@ jobs:
         with:
           python-version: "3.12"
       - uses: pre-commit/action@v3.0.0
+  test:
+    name: Go tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+
+      - name: Build
+        run: go build -o ./dist/
+
+      - name: Test
+        uses: robherley/go-test-action@v0
